methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:5: error: not found: value poseBrosse
    poseBrosse()
    ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
  while (estSurBiscuit()==false){
  ^